# skynet-pvzg

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: OriginalSkynet.cmake  ProjectDependencies.cmake
configs/: skynet_original.lua.in  skynet_refactor.lua.in
docs/: project-framework.md
include/skynet/network/: runtime.hpp
lua/service/: main.lua
src/network/: CMakeLists.txt  core.cc  detail.hpp  tcp_connection.cc  tcp_listener.cc
src/runtime/: CMakeLists.txt  Environment.cc  Environment.hpp  GlobalQueue.cc  GlobalQueue.hpp  HandleManager.cc  HandleManager.hpp  Message.hpp  MessageQueue.cc  MessageQueue.hpp  Service.cc  Service.hpp  ServiceRegistry.cc  ServiceRegistry.hpp
src/skynet_refactor/: main.cc
tests/: dependency_smoke_test.cc
tests/cmake/: check_generated_config.cmake  check_original_outputs.cmake
tools/: bootstrap.sh  build.sh  count-lines.sh  run-original.sh  run-refactor.sh
